Task 20 : Implement AOP Process